fix: remove scrollbars on mobile devices

--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@
 }
 
 body {
-  background-position: center center;
-  background-size: cover;
   font-family: "Gothic2";
   line-height: 2;
   margin: 0;
@@ -13,11 +11,14 @@ body {
 
 .wrapper {
   align-items: flex-start;
+  background-position: center center;
+  background-size: cover;
   box-sizing: border-box;
   display: flex;
-  height: 100vh;
+  height: 100%;
   padding: 2.5rem 15vw;
-  width: 100vw;
+  position: absolute;
+  width: 100%;
 }
 
 .dialogue-box {
